<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".LoginActivity">


  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="68dp"
      android:layout_height="133dp"
      android:src="@drawable/icons"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.154"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.451" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="143dp"
      android:layout_height="120dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.059"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.045"
      app:srcCompat="@drawable/logo" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="187dp"
      android:layout_height="36dp"
      android:fontFamily="@font/akatab"
      android:orientation="vertical"
      android:text="@string/app_name"
      android:textAlignment="textStart"
      android:textColor="@color/white"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.162"
      app:layout_constraintStart_toEndOf="@+id/imageView3"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.093" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="265dp"
      android:layout_height="55dp"
      android:fontFamily="@font/baskervville"
      android:text="@string/text_login"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textStyle="italic"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.267" />

  <EditText
      android:id="@+id/inputpassword"
      android:layout_width="230dp"
      android:layout_height="58dp"
      android:layout_marginStart="10dp"
      android:background="@drawable/input_style"
      android:ems="10"
      android:inputType="textPassword"
      android:padding="8dp"
      android:textColor="@color/blue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.512" />

  <EditText
      android:id="@+id/inputuser"
      android:layout_width="230dp"
      android:layout_height="57dp"
      android:background="@drawable/input_style"
      android:ems="10"
      android:inputType="text"
      android:padding="8dp"
      android:textColor="@color/blue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.166"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button"
      android:layout_width="230dp"
      android:layout_height="64dp"
      android:background="@drawable/custom_button"
      android:text="@string/ingresar"
      android:textColor="@color/white"
      android:textSize="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.653" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/remeber"
      android:textColor="@color/green"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button"
      app:layout_constraintVertical_bias="0.12" />

  <LinearLayout
      android:id="@+id/google_button"
      android:layout_width="326dp"
      android:layout_height="54dp"
      android:background="@drawable/input_style"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.862">

    <ImageView
        android:layout_width="66dp"
        android:layout_height="36dp"
        android:contentDescription="@string/google"
        android:src="@drawable/google" />

    <TextView
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/baskervville"
        android:text="@string/google"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="278dp"
      android:layout_height="39dp"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/google_button">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿No tienes cuenta? "
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="Regístrate"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>